...
          ),
        ),
      ),
    );
  }

  /// Builds the "Forgot Password?" row.
  Widget _buildRememberForgotRow(BuildContext context) {
    return Row(
      children: [
        const Spacer(),
        GestureDetector(
          onTap: () => context.go(Routes.requestResetPassword),
...
